<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/userinfo_activity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/userinfo_portrait"
        style="@style/mine_layout_common"
        >

        <TextView
            style="@style/mine_common_textview"
            android:text="@string/userinfo_setting_portrait"
            />
        <ImageView
            android:id="@+id/userinfo_img"
            style="@style/common_wrap"
            android:src="@drawable/ico_next"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/userinfo_setting_portrait"
            android:layout_width="@dimen/activity_margin_40"
            android:layout_height="@dimen/activity_margin_40"
            android:layout_toLeftOf="@+id/userinfo_img"
            android:layout_marginRight="@dimen/activity_margin_12"
            android:layout_centerVertical="true"
            style="@style/simple_common_view"
            />
        <TextView
            style="@style/mine_common_cutline"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/userinfo_nickname"
        style="@style/mine_layout_common"
        >

        <TextView
            style="@style/mine_common_textview"
            android:text="@string/userinfo_setting_nickname"
            />
        <ImageView
            android:id="@+id/userinfo_nickname_"
            style="@style/common_wrap"
            android:src="@drawable/ico_next"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />
        <TextView
            android:id="@+id/userinfo_set_nickname"
            style="@style/common_wrap"
            android:layout_toLeftOf="@+id/userinfo_nickname_"
            android:layout_marginRight="@dimen/activity_margin_12"
            android:layout_centerVertical="true"
            android:text="@string/userinfo_no_setting"
            />
        <TextView
            style="@style/mine_common_cutline"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/userinfo_sex"
        style="@style/mine_layout_common"
        >

        <TextView
            style="@style/mine_common_textview"
            android:text="@string/userinfo_setting_sex"
            />
        <ImageView
            android:id="@+id/userinfo_sex_"
            style="@style/common_wrap"
            android:src="@drawable/ico_next"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />
        <TextView
            android:id="@+id/userinfo_set_sex"
            style="@style/common_wrap"
            android:layout_toLeftOf="@+id/userinfo_sex_"
            android:layout_marginRight="@dimen/activity_margin_12"
            android:layout_centerVertical="true"
            android:text="@string/userinfo_no_setting"
            />
        <TextView
            style="@style/mine_common_cutline"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/userinfo_userid"
        style="@style/mine_layout_common"
        >

        <TextView
            style="@style/mine_common_textview"
            android:text="@string/userinfo_setting_userid"
            />
        <TextView
            android:id="@+id/userinfo_set_userid"
            style="@style/common_wrap"
            android:layout_marginRight="@dimen/activity_margin_12"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="1234567890"
            />
        <TextView
            style="@style/mine_common_cutline"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/userinfo_bind_mobile"
        style="@style/mine_layout_common"
        >

        <TextView
            style="@style/mine_common_textview"
            android:text="@string/userinfo_setting_mobile"
            />
        <ImageView
            android:id="@+id/userinfo_bind_mobile_"
            style="@style/common_wrap"
            android:src="@drawable/ico_next"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />

        <TextView
            android:id="@+id/userinfo_bind_mobile_num"
            style="@style/common_wrap"
            android:layout_marginRight="@dimen/activity_margin_12"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:maxLength="11"
            android:inputType="number"
            />
        <TextView
            style="@style/mine_common_cutline"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/userinfo_home_page"
        style="@style/mine_layout_common"
        >

        <TextView
            style="@style/mine_common_textview"
            android:text="@string/userinfo_setting_home_page"
            />
        <ImageView
            android:id="@+id/userinfo_home_page_"
            style="@style/common_wrap"
            android:src="@drawable/ico_next"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />
        <TextView
            style="@style/mine_common_cutline"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/userinfo_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_margin_15"
        android:paddingRight="@dimen/activity_margin_15"
        android:background="@color/common_white"
        >

        <EditText
            android:id="@+id/userinfo_singnature_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_margin_80"
            android:layout_marginTop="@dimen/activity_margin_15"
            android:layout_marginLeft="@dimen/activity_margin_12"
            android:layout_marginRight="@dimen/activity_margin_12"
            android:maxLength="150"
            android:textColorHint="@color/launcher_bom_text"
            android:gravity="top|left"
            android:background="@color/common_white"
            android:textSize="@dimen/activity_textsize_15"
            android:hint="@string/myinfo_signture"
            />
        <TextView
            android:id="@+id/userinfo_signature_count"
            style="@style/common_wrap"
            android:layout_below="@+id/userinfo_singnature_et"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_margin_12"
            android:text="@string/myinfo_signature"
            android:textColor="@color/wechat_login_text"
            android:textSize="@dimen/activity_textsize_15"
            />
        <TextView
            style="@style/mine_common_cutline"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>
</LinearLayout>